Update .gitignore to include new Firebase admin SDK credentials and questions directory; modify find_error_questions.ipynb to adjust execution counts and add functionality for counting questions with options.

--- a/find_error_questions.ipynb
+++ b/find_error_questions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +101,152 @@
     "        print(f\"Error processing {file_path}: {str(e)}\")\n",
     "\n",
     "print(\"Completed removing questions without options\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "biyoloji_6_questions.json: 264 questions with options\n",
+      "biyoloji_7_questions.json: 201 questions with options\n",
+      "biyoloji_8_questions.json: 417 questions with options\n",
+      "biyoloji_9_questions.json: 385 questions with options\n",
+      "cografya_6_questions.json: 342 questions with options\n",
+      "cografya_7_questions.json: 372 questions with options\n",
+      "cografya_8_questions.json: 578 questions with options\n",
+      "cografya_9_questions.json: 291 questions with options\n",
+      "dikab_6_questions.json: 131 questions with options\n",
+      "dikab_7_questions.json: 239 questions with options\n",
+      "dikab_8_questions.json: 131 questions with options\n",
+      "dikab_9_questions.json: 42 questions with options\n",
+      "felsefe_7_questions.json: 347 questions with options\n",
+      "felsefe_8_questions.json: 306 questions with options\n",
+      "fizik_6_questions.json: 206 questions with options\n",
+      "fizik_7_questions.json: 90 questions with options\n",
+      "fizik_8_questions.json: 77 questions with options\n",
+      "fizik_9_questions.json: 224 questions with options\n",
+      "fl-biyoloji_6_questions.json: 33 questions with options\n",
+      "fl-biyoloji_7_questions.json: 276 questions with options\n",
+      "fl-biyoloji_8_questions.json: 44 questions with options\n",
+      "fl-biyoloji_9_questions.json: 26 questions with options\n",
+      "fl-fizik_6_questions.json: 10 questions with options\n",
+      "fl-fizik_7_questions.json: 13 questions with options\n",
+      "fl-fizik_8_questions.json: 9 questions with options\n",
+      "fl-fizik_9_questions.json: 61 questions with options\n",
+      "fl-kimya_6_questions.json: 78 questions with options\n",
+      "fl-kimya_7_questions.json: 127 questions with options\n",
+      "fl-kimya_8_questions.json: 141 questions with options\n",
+      "fl-kimya_9_questions.json: 174 questions with options\n",
+      "fl-matematik_6_questions.json: 141 questions with options\n",
+      "fl-matematik_7_questions.json: 90 questions with options\n",
+      "fl-matematik_8_questions.json: 6 questions with options\n",
+      "fl-matematik_9_questions.json: 88 questions with options\n",
+      "ingilizce_6_questions.json: 379 questions with options\n",
+      "ingilizce_7_questions.json: 335 questions with options\n",
+      "ingilizce_8_questions.json: 295 questions with options\n",
+      "ingilizce_9_questions.json: 322 questions with options\n",
+      "inkilap-tarihi_9_questions.json: 324 questions with options\n",
+      "kimya_6_questions.json: 286 questions with options\n",
+      "kimya_7_questions.json: 427 questions with options\n",
+      "kimya_8_questions.json: 289 questions with options\n",
+      "kimya_9_questions.json: 240 questions with options\n",
+      "matematik_6_questions.json: 53 questions with options\n",
+      "matematik_7_questions.json: 50 questions with options\n",
+      "matematik_8_questions.json: 4 questions with options\n",
+      "matematik_9_questions.json: 27 questions with options\n",
+      "tarih_6_questions.json: 380 questions with options\n",
+      "tarih_7_questions.json: 441 questions with options\n",
+      "tarih_8_questions.json: 310 questions with options\n",
+      "tde_6_questions.json: 384 questions with options\n",
+      "tde_7_questions.json: 481 questions with options\n",
+      "tde_8_questions.json: 329 questions with options\n",
+      "tde_9_questions.json: 313 questions with options\n",
+      "total questions with options:  11629\n",
+      "\n",
+      "Completed counting questions with options\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "\n",
+    "questions_dir = \"questions\"\n",
+    "\n",
+    "all_questions = []\n",
+    "\n",
+    "for file_path in filePaths:\n",
+    "    full_path = os.path.join(questions_dir, file_path)\n",
+    "    \n",
+    "    try:\n",
+    "        with open(full_path, 'r', encoding='utf-8') as f:\n",
+    "            questions = json.load(f)\n",
+    "            questions_with_options = [q for q in questions if 'options' in q]\n",
+    "            all_questions.extend(questions_with_options)\n",
+    "            print(f\"{file_path}: {len(questions_with_options)} questions with options\")\n",
+    "                \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing {file_path}: {str(e)}\")\n",
+    "\n",
+    "\n",
+    "print(\"total questions with options: \", len(all_questions))\n",
+    "\n",
+    "print(\"\\nCompleted counting questions with options\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed uploading questions to Firestore\n"
+     ]
+    }
+   ],
+   "source": [
+    "import firebase_admin\n",
+    "from firebase_admin import credentials, firestore\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "# Initialize Firebase Admin SDK\n",
+    "cred = credentials.Certificate('exam-mentor-firebase-adminsdk.json')\n",
+    "if not firebase_admin._apps:\n",
+    "        firebase_admin.initialize_app(cred)\n",
+    "\n",
+    "db = firestore.client()\n",
+    "\n",
+    "\n",
+    "questions_dir = \"questions\"\n",
+    "\n",
+    "for file_path in filePaths:\n",
+    "    full_path = os.path.join(questions_dir, file_path)\n",
+    "    \n",
+    "    try:\n",
+    "        with open(full_path, 'r', encoding='utf-8') as f:\n",
+    "            questions = json.load(f)\n",
+    "            \n",
+    "        # Add each question to Firestore\n",
+    "        for question in questions:\n",
+    "            # Add source file info to question\n",
+    "            question['sourceFile'] = file_path\n",
+    "            \n",
+    "            # Add to Firestore\n",
+    "            db.collection('prodQuestions').add(question)\n",
+    "                \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error uploading questions from {file_path}: {str(e)}\")\n",
+    "\n",
+    "print(\"Completed uploading questions to Firestore\")\n"
    ]
   }
  ],
